force-app/main/default/objects/Transfer_Enquiry_Rule__mdt.object
<CustomObject>
    <description>Custom metadata to manage the auto populated fields when transferring enquiries to queues</description>
    <fields>
        <fullName>Allow_Direct_User_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Transfer rule will fire even the enquiry has been directly assigned to the user. System will use the user&apos;s role to determine the business group.</inlineHelpText>
        <label>Allow Direct User Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Auto-populated category value of the transferred enquiry</description>
        <inlineHelpText>Auto-populated category value of the transferred enquiry</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Promotion</fullName>
                </value>
                <value>
                    <fullName>Business Support</fullName>
                </value>
                <value>
                    <fullName>Business Support - CoE</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Contract - HR</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Form assistance</fullName>
                </value>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>Global mobility (Visas &amp; Visitors)</fullName>
                </value>
                <value>
                    <fullName>HR Business Partnering</fullName>
                </value>
                <value>
                    <fullName>HR System</fullName>
                </value>
                <value>
                    <fullName>HR Systems - HR</fullName>
                </value>
                <value>
                    <fullName>HR Talent Systems</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Mobility@Monash</fullName>
                </value>
                <value>
                    <fullName>Monash College Query</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Payroll - HR</fullName>
                </value>
                <value>
                    <fullName>Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Personal - HR</fullName>
                </value>
                <value>
                    <fullName>Policy &amp; Procedure</fullName>
                </value>
                <value>
                    <fullName>Policy &amp; Procedure - HR</fullName>
                </value>
                <value>
                    <fullName>Pre-employment</fullName>
                </value>
                <value>
                    <fullName>Pre-employment - HR</fullName>
                </value>
                <value>
                    <fullName>Recruitment Support</fullName>
                </value>
                <value>
                    <fullName>Recruitment Support - CoE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_to_Record_Type__c</fullName>
        <description>Auto-populated record type value of the transferred enquiry</description>
        <inlineHelpText>Auto-populated record type value of the transferred enquiry</inlineHelpText>
        <label>Change to Record Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Disability Support Services Enquiry</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Insurance Enquiry</fullName>
                </value>
                <value>
                    <fullName>MGE Enquiry</fullName>
                    <isActive>false</isActive>
                    <label>MGE Enquiry</label>
                </value>
                <value>
                    <fullName>MGRO Enquiry</fullName>
                </value>
                <value>
                    <fullName>Monash Research Office</fullName>
                </value>
                <value>
                    <fullName>MonCon Support</fullName>
                </value>
                <value>
                    <fullName>MPass Card Office</fullName>
                </value>
                <value>
                    <fullName>myResearch</fullName>
                </value>
                <value>
                    <fullName>Post-Application Enquiry</fullName>
                </value>
                <value>
                    <fullName>Pre-Application Enquiry</fullName>
                </value>
                <value>
                    <fullName>Professional Development</fullName>
                </value>
                <value>
                    <fullName>Professional Year Enquiry</fullName>
                </value>
                <value>
                    <fullName>School Enquiry</fullName>
                </value>
                <value>
                    <fullName>SEBS</fullName>
                </value>
                <value>
                    <fullName>SEBS Placements</fullName>
                </value>
                <value>
                    <fullName>Special Consideration</fullName>
                </value>
                <value>
                    <fullName>Special Consideration Limited</fullName>
                </value>
                <value>
                    <fullName>SR Enquiry</fullName>
                </value>
                <value>
                    <fullName>Standard Enquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedForRoleAndSubordinates__c</fullName>
        <description>Business Group (Highest role for the business group on role hierarchy) of the queue listed on the metadata rule for which to exclude the rule</description>
        <inlineHelpText>Business Group (Highest role for the business group on role hierarchy) of the queue listed on the metadata rule for which to exclude the rule</inlineHelpText>
        <label>Excluded for Role and Subordinates</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-- Do not exclude --</fullName>
                </value>
                <value>
                    <fullName>Deferred Exams Applications</fullName>
                </value>
                <value>
                    <fullName>Disability Support Services</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Monash Connect</fullName>
                </value>
                <value>
                    <fullName>Monash HR</fullName>
                </value>
                <value>
                    <fullName>Student Rec Leader</fullName>
                </value>
                <value>
                    <fullName>Student Recruitment &amp; Admissions</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Auto-populated priority value of the transferred enquiry</description>
        <inlineHelpText>Auto-populated priority value of the transferred enquiry</inlineHelpText>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-- Do not change --</fullName>
                    <default>true</default>
                    <label>-- Do not change --</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <description>Destination Queue of the Enquiry</description>
        <inlineHelpText>Destination Queue of the Enquiry</inlineHelpText>
        <label>Queue Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>[DO NOT USE] SEBS - SpecCon</fullName>
                </value>
                <value>
                    <fullName>DSS Enquiries</fullName>
                </value>
                <value>
                    <fullName>General HR</fullName>
                </value>
                <value>
                    <fullName>HR Talent Systems</fullName>
                </value>
                <value>
                    <fullName>Insurance Enquiries</fullName>
                </value>
                <value>
                    <fullName>IRS Fees</fullName>
                </value>
                <value>
                    <fullName>Library - Academic Services</fullName>
                </value>
                <value>
                    <fullName>Library - Frontline Services</fullName>
                </value>
                <value>
                    <fullName>MC Docs</fullName>
                </value>
                <value>
                    <fullName>Monash Connect - Advisors</fullName>
                </value>
                <value>
                    <fullName>Monash Connect Airport Pickup</fullName>
                </value>
                <value>
                    <fullName>Monash Connect Current Student</fullName>
                </value>
                <value>
                    <fullName>Monash Connect Enquiries</fullName>
                </value>
                <value>
                    <fullName>Monash Connect Future Student</fullName>
                </value>
                <value>
                    <fullName>Monash Connect HR</fullName>
                </value>
                <value>
                    <fullName>Monash Connect QA Team</fullName>
                </value>
                <value>
                    <fullName>MonCon Case Management</fullName>
                </value>
                <value>
                    <fullName>MPP Education Enquiries</fullName>
                </value>
                <value>
                    <fullName>MPP Placements Enquiries</fullName>
                </value>
                <value>
                    <fullName>MRO Awards</fullName>
                </value>
                <value>
                    <fullName>MRO Major Awards</fullName>
                </value>
                <value>
                    <fullName>MU Docs</fullName>
                </value>
                <value>
                    <fullName>Professional Year Enquiries</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                    <isActive>false</isActive>
                    <label>Retention</label>
                </value>
                <value>
                    <fullName>SEBS - Complaints</fullName>
                </value>
                <value>
                    <fullName>SEBS - Complaints &amp; Misconduct</fullName>
                </value>
                <value>
                    <fullName>SEBS - on-campus opt out</fullName>
                </value>
                <value>
                    <fullName>SEBS Placements</fullName>
                </value>
                <value>
                    <fullName>SEBS - Spec Con and Spec Circumstances</fullName>
                </value>
                <value>
                    <fullName>SEBS - Special Consideration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Auto-populated status value of the transferred enquiry</description>
        <inlineHelpText>Auto-populated status value of the transferred enquiry</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transfer Enquiry Rule</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Allow_Direct_User_Assignment__c</columns>
        <columns>Category__c</columns>
        <columns>Change_to_Record_Type__c</columns>
        <columns>ExcludedForRoleAndSubordinates__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue_Name__c</columns>
        <columns>Status__c</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
    </listViews>
    <pluralLabel>Transfer Enquiry Rules</pluralLabel>
</CustomObject>